update post: na_java_top_questions