@@ -466,7 +466,7 @@ In summary, `ExecutorService` simplifies thread management and task execution, w
     - By using `CompletableFuture`, you can write more readable and powerful asynchronous code, leveraging the functional programming features of Java 8 and later.
 
 
-# 70-Factory Pattern & Obeserver Pattern
+# 70-Factory Pattern
 
 - Factory Pattern
     - This factory pattern allows you to create objects without exposing the instantiation logic to the client. The client only needs to interact with the `ProductFactory` and provide the product type, and the factory takes care of creating the appropriate product. This promotes loose coupling and makes the code more modular and maintainable.
@@ -528,6 +528,10 @@ In summary, `ExecutorService` simplifies thread management and task execution, w
         }
     }
     ```
+
+
+# 70-Obeserver Pattern
+
 - Observer Pattern
     - This code demonstrates the Observer Pattern, which allows a subject to maintain a list of observers and notify them of any state changes. It promotes loose coupling between the subject and the observers, making it easy to add or remove observers without modifying the subject's code.
     ```java
@@ -1502,3 +1506,521 @@ Here's an explanation of fail-fast and fail-safe mechanisms in Java, particularl
 - Use Fail-Fast: When you are in a single-threaded or low-concurrency environment and want to detect concurrent modifications early.
 - Use Fail-Safe: When you expect concurrent modifications and want to avoid `ConcurrentModificationException`, especially in highly concurrent environments.
 - Understanding the difference between fail-fast and fail-safe mechanisms helps you choose the right collection and iterator for your concurrency needs, ensuring robustness and predictability in your code.
+
+
+# 163-what is SOLID principle
+
+The SOLID principles are a set of five design principles in object - oriented programming and software design. These principles help in creating more maintainable, flexible, and understandable software systems. Here's a detailed look at each of them:
+
+- Single Responsibility Principle (SRP)**
+    - Definition: A class should have only one reason to change. In other words, a class should have only one job or responsibility.
+    - Example: Consider a class that is responsible for calculating the area of different geometric shapes (like circles, rectangles, etc.) and also responsible for saving the calculated results to a database. This violates the SRP. A better design would be to have one class for calculating the areas and another class for handling the database operations.
+    - Benefits: It makes the classes more focused and easier to understand and maintain. When a change is required related to a particular responsibility (say, a change in the area - calculation formula), it's clear which class needs to be modified and other classes are not affected.
+- Open - Closed Principle (OCP)**
+    - Definition: Software entities (classes, modules, functions, etc.) should be open for extension but closed for modification.
+    - Example: Let's say you have a drawing application that can draw different shapes. Initially, it can draw circles and rectangles. If you want to add a new shape like a triangle, you should be able to do it without modifying the existing drawing code for circles and rectangles. This can be achieved through inheritance or interfaces. For instance, you can have an abstract `Shape` class with a `draw()` method, and concrete classes for `Circle`, `Rectangle`, and `Triangle` that implement the `draw()` method.
+    - Benefits: It allows for easy addition of new functionality without the risk of breaking the existing code that has already been tested and is working. This leads to more stable and maintainable software over time.
+- Liskov Substitution Principle (LSP)**
+    - Definition: Subtypes must be substitutable for their base types. In other words, if you have a program that is using a base class, you should be able to substitute a derived class in its place without changing the correctness of the program.
+    - Example: Consider a base class `Vehicle` with a method `startEngine()`. A subclass `Car` inherits from `Vehicle`. If the `Car` class redefines the `startEngine()` method in such a way that it violates the expected behavior (for example, the `startEngine()` method in the `Car` class throws an exception every time it's called, while in the `Vehicle` class it starts the engine successfully most of the time), then it violates the LSP.
+    - Benefits: It ensures that the inheritance hierarchy is used in a way that is consistent with the expected behavior. This helps in building more reliable and understandable object - oriented hierarchies.
+- Interface Segregation Principle (ISP)**
+    - Definition: Clients should not be forced to depend on interfaces they do not use. Instead of having a large, monolithic interface, it's better to have smaller, more specific interfaces.
+    - Example: Suppose you have an interface `Worker` that has methods like `work()`, `takeBreak()`, `attendMeeting()`, and `doPaperwork()`. Now, consider a class `ManualLaborer` that only needs to implement the `work()` method and doesn't need to deal with `doPaperwork()` etc. Having a single `Worker` interface forces the `ManualLaborer` class to implement methods it doesn't need. A better approach would be to split the `Worker` interface into smaller interfaces like `PhysicalWorker` (with `work()` method) and `OfficeWorker` (with `doPaperwork()`, `attendMeeting()` etc.)
+    - Benefits: It reduces the coupling between different parts of the system. Classes only need to implement the interfaces that are relevant to them, which makes the code more modular and easier to understand and maintain.
+- Dependency Inversion Principle (DIP)**
+    - Definition: `High-level` modules should not depend on `low-level` modules. Both should depend on abstractions. Abstractions should not depend on details. Details should depend on abstractions.
+    - Example: Consider a `high-level` module like a `UserController` in a web application that depends on a `low-level` module like a `UserRepository` which is responsible for database operations. Instead of the `UserController` directly depending on the `UserRepository`, they both can depend on an abstraction like an `IUserRepository` interface. The `UserRepository` class implements this interface, and the `UserController` uses the methods defined in the interface. This way, if you want to change the way user data is stored (say, from a SQL database to a NoSQL database), you only need to change the implementation of the `IUserRepository` interface, and the `UserController` remains unaffected.
+    - Benefits: It makes the code more flexible and easier to test. By depending on abstractions, different implementations can be swapped in and out without major changes to the `high-level` modules.
+
+
+# What's Garbage collection types and Whats new about GC in java 8
+
+Reference: https://zhuanlan.zhihu.com/p/25539690
+
+## compact version
+
+- Types of GC:
+    * Serial Garbage Collector: Uses only single thread to perform garbage collection. Good for small sized heaps.
+    * Parallel Garbage Collector: Use multiple threads to in parallel. Good for multi-core systems, like systems with high throughput.
+    * CMS (Concurrent) Garbage Collector: perform GC concurrently with application execution. Used for system requires very low-latency.
+    * G1(Garbage-First) Garbage Collector: It is to balance between low-latency and high throughput. It divides heap into regions and perform GC with each region.
+- What's new in Java:
+    - MetaSpace: Preivouly java use fixed size for Permanent Generation (store metadata and internal code), java 8 introduces metaspace which is flexible based on system memeory.
+    - G1 is made as default GC for large heaps.
+- Java allows you to choose different GC algorithms based on your JVM version. Common GC options include -XX:+UseSerialGC, -XX:+UseParallelGC, -XX:+UseConcMarkSweepGC, and -XX:+UseG1GC.
+
+## detailed version
+
+1. **Garbage Collection Types in Java**
+   - Serial Garbage Collector:
+     - Explanation: This is the simplest and most basic garbage collector. It uses a single thread to perform garbage collection. When it runs, it stops all application threads (a "stop - the - world" event) and then scans the heap to identify and reclaim memory occupied by unreachable objects.
+     - Use Case: It's suitable for small applications or applications with simple memory usage patterns and where the short pauses during garbage collection are not a critical concern. For example, a simple command - line tool that doesn't have strict performance requirements and manages a relatively small amount of data.
+   - Parallel Garbage Collector:
+     - Explanation: Also known as the throughput collector, it uses multiple threads to perform garbage collection. Similar to the serial collector, it also causes "stop - the - world" pauses. However, due to the use of multiple threads, it can generally complete the garbage collection process more quickly than the serial collector, especially on multi - core machines. The heap is divided into generations (young and old), and it focuses on the young generation first. It uses a copying algorithm for the young generation and a mark - sweep - compact algorithm for the old generation.
+     - Use Case: Ideal for applications where high throughput is the main objective. For example, in a batch - processing application where the focus is on completing a large number of tasks in a short time, and a short pause for garbage collection is acceptable to achieve better overall performance.
+   - CMS (Concurrent - Mark - Sweep) Garbage Collector:
+     - Explanation: The CMS garbage collector aims to reduce the pause times during garbage collection. It attempts to perform most of its work concurrently with the application threads. It has two main phases (marking and sweeping) that run concurrently with the application. The marking phase identifies live objects, and the sweeping phase reclaims memory occupied by unreachable objects. However, it still has some short "stop - the - world" pauses during critical points in the process, such as at the start and end of the marking and sweeping phases.
+     - Use Case: Suitable for applications that require low - latency and can't afford long pauses. For example, in a web application where user requests need to be served quickly and a long garbage collection pause could lead to a poor user experience.
+   - G1 (Garbage - First) Garbage Collector:
+     - Explanation: The G1 garbage collector divides the heap into multiple regions of equal size. It focuses on regions that have the most garbage (hence the name "Garbage - First"). It also tries to balance the pause times by predicting which regions are likely to fill up quickly and prioritizing them for collection. It uses a combination of concurrent and parallel techniques to achieve efficient garbage collection.
+     - Use Case: Ideal for applications with large heaps and where there is a need to balance throughput and pause times. For example, in a data - intensive application that manages a large amount of data in memory and requires both good performance and relatively short pauses to handle incoming requests.
+2. **New GC - Related Features in Java 8**
+   - Metaspace: In Java 8, the permanent generation (PermGen) was removed and replaced with metaspace.
+     - Explanation: PermGen was used to store metadata such as class definitions, method data, and constant pool information. It had a fixed - size limit and was a common source of memory - related issues, such as `OutOfMemoryError` due to the inability to load more classes. Metaspace, on the other hand, is a native memory area. It can grow and shrink dynamically, which reduces the likelihood of running out of memory due to class - loading - related issues. The garbage collection of metaspace is more efficient as it uses the same collectors as the heap (e.g., G1 can manage metaspace regions).
+     - Benefit: This change provides more flexibility in handling class - loading and metadata storage, making it easier to manage large - scale applications that load a large number of classes. For example, in a Java EE application server that deploys many applications and loads numerous classes, the metaspace allows for more efficient use of memory and better handling of class - unloading scenarios.
+
+
+# 363-Callable vs Runnable
+
+In Java, both `Runnable` and `Callable` are used to represent tasks that can be executed concurrently, usually in the context of multi - threading, but they have several differences:
+
+- 1. Return Value
+    - Runnable:
+        - A `Runnable` interface does not have a return value. The `run` method of the `Runnable` interface has a `void` return type. Its purpose is mainly to encapsulate a block of code that needs to be executed, such as a task that performs a simple operation like printing a message or updating a counter.
+        - For example, consider the following `Runnable` implementation:
+        ```java
+        class MyRunnable implements Runnable {
+            @Override
+            public void run() {
+                System.out.println("This is a Runnable task.");
+            }
+        }
+        ```
+  - Callable:
+      - A `Callable` interface is designed to return a result. The `call` method of the `Callable` interface has a generic return type (`<V>`). The actual type of the return value is specified when the `Callable` is implemented.
+      - For example, here is a simple `Callable` implementation that returns an integer:
+    ```java
+    import java.util.concurrent.Callable;
+    class MyCallable implements Callable<Integer> {
+        @Override
+        public Integer call() throws Exception {
+            return 42;
+        }
+    }
+    ```
+- 2. Exception Handling
+    - Runnable:
+        - The `run` method of the `Runnable` interface does not throw checked exceptions. Any checked exceptions that occur within the `run` method must be caught and handled inside the `run` method. If an unchecked exception (such as a `RuntimeException`) is thrown, it will cause the thread executing the `Runnable` to terminate abnormally.
+        - For example, if you try to access a file that doesn't exist inside the `run` method and you don't handle the `FileNotFoundException` (a checked exception), it will result in a compilation error.
+    - Callable:
+        - The `call` method of the `Callable` interface can throw checked exceptions. This allows for more flexible error - handling mechanisms. The exceptions thrown from the `call` method can be propagated to the calling code and handled appropriately.
+        - For example, if the `call` method is performing a network operation and a `SocketException` (a checked exception) occurs, it can be thrown and caught in the code that submitted the `Callable` task.
+- 3. Usage with Executor Framework
+    - Runnable:
+        - `Runnable` is often used with the `ExecutorService`'s `execute` method. When you use the `execute` method to submit a `Runnable` task, the `ExecutorService` will execute the `run` method of the `Runnable` in a separate thread (or reuse an existing thread from a thread pool).
+        - For example:
+        ```java
+        import java.util.concurrent.ExecutorService;
+        import java.util.concurrent.Executors;
+        public class RunnableExample {
+            public static void main(String[] args) {
+                ExecutorService executor = Executors.newSingleThreadExecutor();
+                Runnable task = new MyRunnable();
+                executor.execute(task);
+                executor.shutdown();
+            }
+        }
+        ```
+    - Callable:
+        - `Callable` is used with the `ExecutorService`'s `submit` method. When you submit a `Callable` task using the `submit` method, the `ExecutorService` returns a `Future` object. The `Future` object can be used to retrieve the result of the `Callable` task (using the `get` method) and to manage the state of the task (such as checking if the task is done, canceling the task, etc.).
+        - For example:
+        ```java
+        import java.util.concurrent.ExecutorService;
+        import java.util.concurrent.Executors;
+        import java.util.concurrent.Future;
+        public class CallableExample {
+            public static void main(String[] args) throws Exception {
+                ExecutorService executor = Executors.newSingleThreadExecutor();
+                Callable<Integer> task = new MyCallable();
+                Future<Integer> future = executor.submit(task);
+                System.out.println("The result is: " + future.get());
+                executor.shutdown();
+            }
+        }
+    ```
+
+
+# 375-Difference between Iterator and Enumeration
+
+- Both use to loop java collections.
+- Iterator: can remove elements when iterator.
+    ```java
+    import java.util.ArrayList;
+    import java.util.Iterator;
+    public class IteratorRemoveExample {
+        public static void main(String[] args) {
+            ArrayList<Integer> list = new ArrayList<>();
+            list.add(1);
+            list.add(2);
+            list.add(3);
+            Iterator<Integer> iterator = list.iterator();
+            while (iterator.hasNext()) {
+                int element = iterator.next();
+                if (element % 2 == 0) {
+                    iterator.remove();
+                }
+            }
+            System.out.println(list);
+        }
+    }
+- Enumeration: cannot remove elements.
+    ```java
+    import java.util.Enumeration;
+    import java.util.Vector;
+    public class EnumerationExample {
+        public static void main(String[] args) {
+            Vector<String> vector = new Vector<>();
+            vector.add("Apple");
+            vector.add("Banana");
+            Enumeration<String> enumeration = vector.elements();
+            while (enumeration.hasMoreElements()) {
+                System.out.println(enumeration.nextElement());
+            }
+        }
+    }
+    ```
+
+
+# 52-131-When implements Serializable, what if you don't define the serialVersionUID? What if you remove it?
+
+## What is `serialVersionUID`?
+- `serialVersionUID` is a unique identifier for a serializable class. It is used during deserialization to ensure that the sender and receiver of a serialized object have compatible versions of that class. It is stored as a `long` value in the serialized object.
+
+## When you don't define `serialVersionUID`
+
+- **Behavior**:
+  - If you do not explicitly define a `serialVersionUID` in your serializable class, the Java runtime will automatically generate one for you at runtime based on various aspects of the class, such as the fields, methods, and other characteristics of the class.
+  - This auto-generated `serialVersionUID` is computed using a complex algorithm that takes into account the class name, the interfaces it implements, and other factors.
+
+- **Implications**:
+  - **Compatibility issues**: Any change in the class structure (e.g., adding or removing fields, changing the type of a field, or modifying methods) will cause the runtime to generate a different `serialVersionUID`. This means that if you serialize an object with one version of the class and then try to deserialize it with a modified version of the class, the deserialization will fail with an `InvalidClassException`.
+  - **Example**: Consider the following serializable class:
+```java
+import java.io.Serializable;
+class MyClass implements Serializable {
+    private int value;
+    // Constructor, getters, and setters
+    public MyClass(int value) {
+        this.value = value;
+    }
+}
+```
+  - If you serialize an object of `MyClass` in one version of your application, and then you modify the `MyClass` by adding a new field, like this:
+```java
+import java.io.Serializable;
+class MyClass implements Serializable {
+    private int value;
+    private String name;
+    // Constructor, getters, and setters
+    public MyClass(int value, String name) {
+        this.value = value;
+        this.name = name;
+    }
+}
+```
+  - Then, when you try to deserialize the previously serialized object, you will get an `InvalidClassException` because the auto-generated `serialVersionUID` has changed.
+
+
+## When you remove `serialVersionUID`
+
+- **Behavior**:
+  - If you initially define a `serialVersionUID` and then remove it from your class, the Java runtime will again generate a new one based on the current state of the class.
+- **Implications**:
+  - **Compatibility issues**: Similar to not defining it initially, removing the `serialVersionUID` can lead to deserialization failures. If you have serialized objects using the old version of the class with a defined `serialVersionUID` and then remove it, the deserialization process will try to use the auto-generated `serialVersionUID`, which is likely to be different from the original one, resulting in an `InvalidClassException`.
+  - **Example**: Consider this class with a defined `serialVersionUID`:
+```java
+import java.io.Serializable;
+class MyClass implements Serializable {
+    private static final long serialVersionUID = 123456789L;
+    private int value;
+    // Constructor, getters, and setters
+    public MyClass(int value) {
+        this.value = value;
+    }
+}
+```
+  - If you serialize objects with this version of `MyClass`, and then you remove the `serialVersionUID` from the class like this:
+```java
+import java.io.Serializable;
+class MyClass implements Serializable {
+    private int value;
+    // Constructor, getters, and setters
+    public MyClass(int value) {
+        this.value = value;
+    }
+}
+```
+  - When you try to deserialize the previously serialized objects, you will face `InvalidClassException` as the deserialization process will use the new auto-generated `serialVersionUID` which will not match the old one.
+
+
+## Best Practices
+
+- **Explicitly define `serialVersionUID`**:
+  - It is generally recommended to explicitly define `serialVersionUID` in your serializable classes. This way, you have more control over versioning. You can decide when a change in the class should break compatibility and when it should not.
+  - **Example**:
+```java
+import java.io.Serializable;
+class MyClass implements Serializable {
+    private static final long serialVersionUID = 123456789L;
+    private int value;
+    // Constructor, getters, and setters
+    public MyClass(int value) {
+        this.value = value;
+    }
+}
+```
+  - If you later modify the class by adding a new field but decide that it should still be compatible with the previously serialized objects, you can keep the `serialVersionUID` the same. However, if you decide that the changes are significant enough to break compatibility, you can change the `serialVersionUID`.
+
+
+## Serialization and Deserialization Example
+
+- Here is a simple example of serializing and deserializing an object:
+```java
+import java.io.FileOutputStream;
+import java.io.ObjectOutputStream;
+import java.io.FileInputStream;
+import java.io.ObjectInputStream;
+import java.io.Serializable;
+
+class MyClass implements Serializable {
+    private static final long serialVersionUID = 123456789L;
+    private int value;
+    public MyClass(int value) {
+        this.value = value;
+    }
+    public int getValue() {
+        return value;
+    }
+}
+
+public class SerializationExample {
+    public static void main(String[] args) {
+        MyClass obj = new MyClass(42);
+        try {
+            // Serialization
+            FileOutputStream fileOut = new FileOutputStream("object.ser");
+            ObjectOutputStream out = new ObjectOutputStream(fileOut);
+            out.writeObject(obj);
+            out.close();
+            fileOut.close();
+
+            // Deserialization
+            FileInputStream fileIn = new FileInputStream("object.ser");
+            ObjectInputStream in = new ObjectInputStream(fileIn);
+            MyClass deserializedObj = (MyClass) in.readObject();
+            in.close();
+            fileIn.close();
+            System.out.println(deserializedObj.getValue());
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+- In this example, the `MyClass` object is serialized to a file and then deserialized. If you change the `MyClass` and want to maintain compatibility, you should keep the `serialVersionUID` constant. If you want to break compatibility, change the `serialVersionUID`.
+
+
+
+# 372-What is externalization and its difference with serialization
+
+1. **Serialization**
+   - Definition: Serialization is the process of converting an object's state into a byte stream so that it can be persisted (saved to a file, sent over a network, etc.) and later reconstructed (deserialized) to an object with the same state. In Java, the `java.io.Serializable` interface is used to mark a class as serializable. When an object of a serializable class is serialized, the JVM takes care of writing the object's state to a stream.
+   - Example: Consider a simple `Person` class.
+        ```java
+        import java.io.Serializable;
+        class Person implements Serializable {
+            private String name;
+            private int age;
+            // Constructor, getters, and setters
+            public Person(String name, int age) {
+                this.name = name;
+                this.age = age;
+            }
+        }
+        ```
+   - How it works: When you want to serialize an object of the `Person` class, you can use `ObjectOutputStream`. For example:
+        ```java
+        import java.io.FileOutputStream;
+        import java.io.ObjectOutputStream;
+        public class SerializationExample {
+            public static void main(String[] args) {
+                Person person = new Person("John", 30);
+                try {
+                    FileOutputStream fileOut = new FileOutputStream("person.ser");
+                    ObjectOutputStream out = new ObjectOutputStream(fileOut);
+                    out.writeObject(person);
+                    out.close();
+                    fileOut.close();
+                } catch (Exception e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+        ```
+   - Limitations: The serialization process is automatic and uses the default behavior provided by the JVM. This can lead to inefficiencies and security risks. For example, sensitive data might be serialized and transferred without proper handling. Also, if the class structure changes (e.g., a new field is added), deserialization of the previously serialized objects might cause issues.
+2. **Externalization**
+   - Definition: Externalization is a more controlled way of handling object persistence. A class that wants to use externalization must implement the `java.io.Externalizable` interface. This interface has two methods: `writeExternal` and `readExternal`. The programmer is responsible for explicitly writing and reading the object's state to and from an `ObjectOutput` and `ObjectInput` stream.
+   - Example: Let's modify the `Person` class to use externalization.
+    ```java
+    import java.io.Externalizable;
+    import java.io.IOException;
+    import java.io.ObjectInput;
+    import java.io.ObjectOutput;
+    class Person implements Externalizable {
+        private String name;
+        private int age;
+        public Person() {
+            // Required for externalization
+        }
+        public Person(String name, int age) {
+            this.name = name;
+            this.age = age;
+        }
+        @Override
+        public void writeExternal(ObjectOutput out) throws IOException {
+            out.writeUTF(name);
+            out.writeInt(age);
+        }
+        @Override
+        public void readExternal(ObjectInput in) throws IOException, ClassNotFoundException {
+            name = in.readUTF();
+            age = in.readInt();
+        }
+    }
+    ```
+   - How it works: When you want to externalize an object of the `Person` class, you can use `ObjectOutputStream` and `ObjectInputStream` similar to serialization, but the object's state is written and read using the custom methods `writeExternal` and `readExternal`. For example:
+    ```java
+    import java.io.FileOutputStream;
+    import java.io.FileInputStream;
+    import java.io.ObjectOutputStream;
+    import java.io.ObjectInputStream;
+    public class ExternalizationExample {
+        public static void main(String[] args) {
+            Person person = new Person("Alice", 25);
+            try {
+                // Writing the object
+                FileOutputStream fileOut = new FileOutputStream("person.external");
+                ObjectOutputStream out = new ObjectOutputStream(fileOut);
+                out.writeObject(person);
+                out.close();
+                fileOut.close();
+                // Reading the object
+                FileInputStream fileIn = new FileInputStream("person.external");
+                ObjectInputStream in = new ObjectInputStream(fileIn);
+                Person restoredPerson = (Person) in.readObject();
+                in.close();
+                fileIn.close();
+                System.out.println(restoredPerson.getName() + " " + restoredPerson.getAge());
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
+    }
+    ```
+3. **Differences**
+   - Control:
+     - Serialization: The process is mostly automatic. The JVM takes care of writing the object's non - transient fields to the stream. The programmer has limited control over what is serialized.
+     - Externalization: The programmer has full control. You decide exactly what data to write and read, and in what format. This allows for more efficient and customized persistence.
+   - Constructor Requirement:
+     - Serialization: The default constructor is not required. The JVM can reconstruct the object using the serialized data.
+     - Externalization: A public no - argument constructor is required. This constructor is used during the deserialization process (reading the object's state).
+   - Performance and Flexibility:
+     - Serialization: It's a convenient option when you don't need a high level of control. But it might serialize more data than necessary and can be less efficient in terms of space and time.
+     - Externalization: It's more flexible and can lead to better performance if implemented correctly. You can choose to serialize only the essential data and in a more optimized way.
+
+
+# 75-Different types of "method reference"
+
+In Java 8, there are four types of method references:
+
+
+## Static Method Reference
+
+- Explanation: A static method reference refers to a static method of a class. The syntax is `ClassName::staticMethodName`. The method reference can be used as a replacement for a lambda expression that calls a static method.
+- Example: Consider a utility class `MathUtils` with a static method `add` that takes two integers and returns their sum.
+    ```java
+    class MathUtils {
+        public static int add(int a, int b) {
+            return a + b;
+        }
+    }
+    ```
+    You can use a static method reference with the `BinaryOperator` interface. The `BinaryOperator` interface represents an operation that takes two operands of the same type and returns a result of that type.
+    ```java
+    import java.util.function.BinaryOperator;
+    public class StaticMethodReferenceExample {
+        public static void main(String[] args) {
+            BinaryOperator<Integer> adder = MathUtils::add;
+            int result = adder.apply(3, 5);
+            System.out.println(result); 
+        }
+    }
+    ```
+    Here, `MathUtils::add` is a static method reference that is assigned to the `adder` variable of type `BinaryOperator<Integer>`. The `apply` method of `adder` then calls the `add` method of the `MathUtils` class.
+
+
+## Instance Method Reference of a Particular Object
+
+- Explanation: This type of method reference refers to an instance method of a particular object. The syntax is `objectReference::instanceMethodName`. It's used when you have an existing object and want to refer to one of its methods.
+- Example: Consider a `String` object and its `length` method.
+    ```java
+    import java.util.function.Function;
+    public class InstanceMethodReferenceExample {
+        public static void main(String[] args) {
+            String str = "Hello";
+            Function<String, Integer> stringLengthFunction = str::length;
+            int length = stringLengthFunction.apply(str);
+            System.out.println(length); 
+        }
+    }
+    ```
+    Here, `str::length` is an instance method reference of the `str` object. The `Function<String, Integer>` interface's `apply` method calls the `length` method of the `str` object.
+
+
+## Instance Method Reference to an Instance Method of an Arbitrary Object of a Particular Type
+
+- Explanation: The syntax is `ClassName::instanceMethodName`. This is used when the method being referred to is an instance method, and the actual object on which the method will be called will be determined later. The method reference provides the method signature, and the object is provided when the function is actually executed.
+- Example: Consider the `compareTo` method of the `String` class.
+    ```java
+    import java.util.Arrays;
+    import java.util.Comparator;
+    public class ArbitraryObjectMethodReferenceExample {
+        public static void main(String[] args) {
+            String[] strings = {"apple", "banana", "cherry"};
+            Arrays.sort(strings, String::compareTo);
+            System.out.println(Arrays.toString(strings)); 
+        }
+    }
+    ```
+    Here, `String::compareTo` is an instance method reference to the `compareTo` method of the `String` class. The `Arrays.sort` method uses this reference to compare the strings and sort them.
+
+
+## Constructor Reference
+
+- Explanation: A constructor reference refers to a constructor of a class. The syntax is `ClassName::new`. It's used to create new objects of a particular class. Constructor references are useful when you want to use a constructor as a method reference, for example, in factory methods or when populating collections with new objects.
+- Example: Consider a simple `Person` class with a constructor that takes a `String` name.
+    ```java
+    class Person {
+        private String name;
+        public Person(String name) {
+            this.name = name;
+        }
+        public String getName() {
+            return name;
+        }
+    }
+    ```
+    You can use a constructor reference with a `Supplier` interface (which represents a function that supplies a result).
+    ```java
+    import java.util.function.Supplier;
+    public class ConstructorReferenceExample {
+        public static void main(String[] args) {
+            Supplier<Person> personSupplier = Person::new;
+            Person person = personSupplier.get();
+            person = personSupplier.get("John");
+            System.out.println(person.getName()); 
+        }
+    }
+    ```
+    Here, `Person::new` is a constructor reference. The `get` method of the `Supplier<Person>` calls the constructor of the `Person` class to create a new `Person` object.
